unpackaged/main/default/objects/Communication__c/fields/Adjective__c.field-meta.xml
<CustomField>
    <fullName>Adjective__c</fullName>
    <label>Adjective</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>dry</fullName>
            </value>
            <value>
                <fullName>dusty</fullName>
            </value>
            <value>
                <fullName>freezing</fullName>
            </value>
            <value>
                <fullName>gaseous</fullName>
            </value>
            <value>
                <fullName>cosmic</fullName>
            </value>
            <value>
                <fullName>moist</fullName>
            </value>
            <value>
                <fullName>stinky</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>