unpackaged/main/default/objects/Communication__c/fields/Direction__c.field-meta.xml
<CustomField>
    <fullName>Direction__c</fullName>
    <label>Direction</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>backwards</fullName>
            </value>
            <value>
                <fullName>sideways</fullName>
            </value>
            <value>
                <fullName>north</fullName>
            </value>
            <value>
                <fullName>in endless circles</fullName>
            </value>
            <value>
                <fullName>south</fullName>
            </value>
            <value>
                <fullName>in big figure eights</fullName>
            </value>
            <value>
                <fullName>widdershins</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>