unpackaged/main/default/objects/Communication__c/fields/Noun__c.field-meta.xml
<CustomField>
    <fullName>Noun__c</fullName>
    <label>Noun</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>banana</fullName>
            </value>
            <value>
                <fullName>alien</fullName>
            </value>
            <value>
                <fullName>astronaut</fullName>
            </value>
            <value>
                <fullName>asteroid</fullName>
            </value>
            <value>
                <fullName>spacecraft</fullName>
            </value>
            <value>
                <fullName>pineapple upside-down cake</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>