unpackaged/main/default/objects/Communication__c/fields/Proper_Noun__c.field-meta.xml
<CustomField>
    <fullName>Proper_Noun__c</fullName>
    <label>Proper Noun</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cloudy</fullName>
            </value>
            <value>
                <fullName>Codey</fullName>
            </value>
            <value>
                <fullName>Astro</fullName>
            </value>
            <value>
                <fullName>Earnie</fullName>
            </value>
            <value>
                <fullName>Hootie McOwlface</fullName>
            </value>
            <value>
                <fullName>Adam Seligman</fullName>
            </value>
            <value>
                <fullName>Sarah Franklin</fullName>
            </value>
            <value>
                <fullName>Jeff Douglas</fullName>
            </value>
            <value>
                <fullName>Charlie Isaacs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>