unpackaged/main/default/objects/Communication__c/fields/Verb__c.field-meta.xml
<CustomField>
    <fullName>Verb__c</fullName>
    <label>Verb</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>red-dirt rolling</fullName>
            </value>
            <value>
                <fullName>shimmy-shammying</fullName>
            </value>
            <value>
                <fullName>whirling</fullName>
            </value>
            <value>
                <fullName>two-stepping</fullName>
            </value>
            <value>
                <fullName>moonwalking</fullName>
            </value>
            <value>
                <fullName>doing the robot (literally)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>